WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285772
Fix Document::topOrigin when site isolation is enabled
https://bugs.webkit.org/show_bug.cgi?id=285772
Summary
Fix Document::topOrigin when site isolation is enabled
Alex Christensen
Reported
2025-01-10 14:00:01 PST
rdar://142561325
Attachments
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2025-01-10 14:01:33 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38870
EWS
Comment 2
2025-01-10 14:53:40 PST
Committed
288731@main
(47d8a56277db): <
https://commits.webkit.org/288731@main
> Reviewed commits have been landed. Closing PR #38870 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug