Fix Document::topOrigin when site isolation is enabled https://bugs.webkit.org/show_bug.cgi?id=285772 rdar://142561325

Reviewed by Brady Eidson.

288038@main added infrastructure for getting the right origin,
but it didn't use it.  This fixes an internal perf benchmark
with site isolation enabled.

* Source/WebCore/dom/Document.cpp:
(WebCore::Document::topOrigin const):

Canonical link: https://commits.webkit.org/288731@main